<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/edit_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/edit_topbar_menu"
            app:navigationIcon="@drawable/ic_action_close"
            app:title="@string/mainTitle" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/font_small_size"
        android:paddingEnd="@dimen/font_small_size"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/edit_create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_time"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_small_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_margin_small_spacing"
                android:layout_marginEnd="@dimen/view_margin_small_spacing"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/edit_words_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainTitle"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_small_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/font_small_size"
            android:background="@color/grey" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="标题"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:textColorHint="@color/green" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="文本"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:textColorHint="@color/green" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/story_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:text="@string/OptionAddText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_add_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:text="@string/OptionAddPicture" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_add_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:text="@string/OptionAddVoice" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_other_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:text="@string/Other" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>