<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_story"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/view_margin_small_spacing"
    android:layout_marginEnd="@dimen/view_margin_small_spacing"
    android:layout_marginBottom="@dimen/view_margin_small_spacing"
    android:clickable="true"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp">

    <!-- 内容布局 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- 标题和时间 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <!-- 标题 -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mainTitle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_large_size"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/item_time"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- 时间 -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_time"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_small_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 图片部分 -->
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter" />

        <!-- 简短的介绍 -->
        <TextView
            android:id="@+id/item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_introduction"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal_size"
            android:lineSpacingExtra="2dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
